bugfix;  decade category pattern processing added; links added to popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,7 +20,6 @@
     <div style="display: flex;flex-direction: column;">
         <div style="display: flex; justify-content: space-between;">
             <a id="toggleOnOff" href="#">Toggle on/off</a>
-            <a id="aboutLink" href="#">About Old Era</a>
         </div>
         <br />
         <span class="MenuTitle">Settings</span>
@@ -64,6 +63,13 @@
 
         </div>
 
+        <br />
+        <span class="MenuTitle">Links</span>
+        <div style="display: flex; justify-content: space-between;">
+            <a id="aboutLink" href="#">Old Era</a>
+            <a id="whitePaperLink" href="#">White paper</a>
+            <a id="timelineLink" href="#">Interactive timeline</a>
+        </div>
 
 
 
