list of allowed sites implemented; bunch of bugs fixed

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -22,6 +22,13 @@
             <a id="toggleOnOff" href="#">Toggle on/off</a>
         </div>
         <br />
+
+        <div class="PopupItemDiv">
+            <input type="checkbox" id="UseOnThisSiteCheckbox">
+            <label class="CheckboxLabel" for="UseOnThisSiteCheckbox" id="DomainNameLabel">Use on this website</label>
+        </div>
+        <br />
+
         <span class="MenuTitle">Settings</span>
         <div class="PopupItemDiv">
             <input type="checkbox" id="DontUseServerCheckbox">
