editing mode added but not yet fully developed

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,6 +20,7 @@
     <div style="display: flex;flex-direction: column;">
         <div style="display: flex; justify-content: space-between;">
             <a id="toggleOnOff" href="#">Toggle on/off</a>
+            <span>[<a id="toggleEditingMode" href="#">Edit</a>]</span>
         </div>
         <br />
 
@@ -95,11 +96,14 @@
         </div>
 
         <br />
-        <span class="MenuTitle">Links</span>
-        <div style="display: flex; justify-content: space-between;">
-            <a id="aboutLink" href="#">Old Era</a>
-            <a id="whitePaperLink" href="#">White paper</a>
-            <a id="timelineLink" href="#">Interactive timeline</a>
+        <div id="LinksSection">
+            <span class="MenuTitle">Links</span>
+            <div style="display: flex; justify-content: space-between;">
+                <a id="aboutLink" href="#">Old Era</a>
+                <a id="whitePaperLink" href="#">White paper</a>
+                <a id="timelineLink" href="#">Interactive timeline</a>
+            </div>
+
         </div>
 
 
