book title and quote settings removed

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -43,15 +43,15 @@
                 <label class="CheckboxLabel" for="TranslateYearsPreciselyCheckbox">always translate years precisely</label>
             </div>
 
-            <div class="PopupItemDiv">
+            <!-- <div class="PopupItemDiv">
                 <input type="checkbox" id="TranslateInBookTitlesCheckbox">
                 <label class="CheckboxLabel" for="TranslateInBookTitlesCheckbox">translate dates in book titles</label>
-            </div>
+            </div> -->
 
-            <div class="PopupItemDiv">
+            <!-- <div class="PopupItemDiv">
                 <input type="checkbox" id="TranslateInQuotesCheckbox">
                 <label class="CheckboxLabel" for="TranslateInQuotesCheckbox">translate dates in quotes</label>
-            </div>
+            </div> -->
             <br />
 
             <div>
@@ -159,9 +159,9 @@
                 <button id="commitOfOE" style="width: 50%;">Cmt 'of OE'</button>
             </div>
             <button id="commitIgnoredPart">Commit Ignored part</button>
-            <button id="markerMode">Marker mode</button>
+            <!-- <button id="markerMode">Marker mode</button>
             <button id="bookTitleMode">Book title mode</button>
-            <button id="quoteMode">Quote mode</button>
+            <button id="quoteMode">Quote mode</button> -->
             <button id="test">Test</button>
             <button id="sendToServer">Send to server</button>
     
