wikitext editing popup; "don't show again" checkbox; running script on content load

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -18,6 +18,10 @@
 </head>
 
 <body>
+
+    
+
+
     <div style="display: flex;flex-direction: column; width:250px;">
         <div style="display: flex; justify-content: space-between;">
             <a id="toggleOnOff" href="#">Toggle on/off</a>
@@ -164,6 +168,7 @@
             <button id="quoteMode">Quote mode</button> -->
             <button id="test">Test</button>
             <button id="sendToServer">Send to server</button>
+            <button id="startWikitextEditing">Edit wikitext</button>
     
         </div>
 
