small changes in UI

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -157,8 +157,8 @@
             <button id="bookTitleMode">Book title mode</button>
             <button id="quoteMode">Quote mode</button> -->
             <button id="test">Test</button>
-            <button id="sendToServer">Send to server</button>
-            <button id="startWikitextEditing">Edit wikitext</button>
+            <button id="openEditor">Open editor</button>
+            <button id="startWikitextEditing">Open wikitext editor</button>
     
         </div>
 
