link to supported websites page added to extension popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -36,6 +36,12 @@
                 <label class="CheckboxLabel" for="UseOnThisSiteCheckbox" id="DomainNameLabel">Use on this website</label>
             </div>
             <br />
+            <div id="supportedWebsites" style="display: flex;flex-direction: column;">
+                <span class="MenuTitle"><a id="seeSupportedWebsites" href="#">List of supported websites</a></span>
+            
+            </div>
+
+            <br />
 
             <span class="MenuTitle">Settings</span>
             <div class="PopupItemDiv">
