changing ad mode from extension popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -52,6 +52,21 @@
                 <input type="checkbox" id="TranslateYearsPreciselyCheckbox">
                 <label class="CheckboxLabel" for="TranslateYearsPreciselyCheckbox">always translate years precisely</label>
             </div>
+            <span style="margin-top: 3px;">Common Era:</span>
+            <div style="display:flex;flex-direction: row;width: 90%;justify-content: space-between;">
+                <div class="CommonEraOptionDiv">
+                    <input type="radio" id="ADCE">
+                    <label class="CheckboxLabel" for="ADCE">AD/CE</label>
+                </div>
+                <div class="CommonEraOptionDiv">
+                    <input type="radio" id="Holocene">
+                    <label class="CheckboxLabel" for="Holocene">Holocene</label>
+                </div>
+                <div class="CommonEraOptionDiv">
+                    <input type="radio" id="E2">
+                    <label class="CheckboxLabel" for="E2">E2</label>
+                </div>
+            </div>
 
             <!-- <div class="PopupItemDiv">
                 <input type="checkbox" id="TranslateInBookTitlesCheckbox">
