bc-at handling added

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -136,13 +136,6 @@
                 <button id="goBackInHistory" style="width: 50%;">&lt;</button>
                 <button id="goForwardInHistory" style="width: 50%;">&gt;</button>
             </div>
-            <!-- <button id="loadFromTemplates">Load from templates</button>
-            <button id="loadFromServer">Load from server</button>
-            <div style="display: flex;">
-                <button id="loadFromServerOnlyFixed">Only fixed</button>
-                <button id="loadFromServerWithoutFixed">Without fixed</button>
-            </div>
-            <button id="loadFromStorage">Load from storage</button> -->
             <div style="display: flex;">
                 <button id="find1DigitNumbers" style="width: 25%;">1</button>
                 <button id="find2DigitNumbers" style="width: 25%;">2</button>
@@ -170,8 +163,9 @@
             </div>
             <button id="commitRemovals">Commit removals</button>
             <div style="display: flex;">
-                <button id="commitOE" style="width: 50%;">Commit OE</button>
-                <button id="commitOfOE" style="width: 50%;">Cmt 'of OE'</button>
+                <button id="commitOE" style="width: 33.3%;">Commit OE</button>
+                <button id="commitOldEra" style="width: 33.3%;">Commit Old Era</button>
+                <button id="commitOfOldEra" style="width: 33.3%;">Commit 'of Old Era'</button>
             </div>
             <button id="commitIgnoredPart">Commit Ignored part</button>
             <!-- <button id="markerMode">Marker mode</button>
