some changes in finding parts to ignore in html; highlighting imprecise years

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -46,11 +46,15 @@
             <span class="MenuTitle">Settings</span>
             <div class="PopupItemDiv">
                 <input type="checkbox" id="DontUseServerCheckbox">
-                <label class="CheckboxLabel" for="DontUseServerCheckbox">don't use server (some dates and images will not be replaced)</label>
+                <label class="CheckboxLabel" for="DontUseServerCheckbox">don't use server (not recommended)</label>
             </div>
             <div class="PopupItemDiv">
                 <input type="checkbox" id="TranslateYearsPreciselyCheckbox">
                 <label class="CheckboxLabel" for="TranslateYearsPreciselyCheckbox">always translate years precisely</label>
+            </div>
+            <div class="PopupItemDiv">
+                <input type="checkbox" id="HighlightImpreciseTranslationsCheckbox">
+                <label class="CheckboxLabel" for="HighlightImpreciseTranslationsCheckbox">highlight imprecise dates</label>
             </div>
             <span style="margin-top: 3px;">Common Era:</span>
             <div style="display:flex;flex-direction: row;width: 90%;justify-content: space-between;">
