--- a/extension/popup.html
+++ b/extension/popup.html
@@ -59,16 +59,16 @@
             <span style="margin-top: 3px;">Common Era:</span>
             <div style="display:flex;flex-direction: row;width: 90%;justify-content: space-between;">
                 <div class="CommonEraOptionDiv">
-                    <input type="radio" id="ADCE">
-                    <label class="CheckboxLabel" for="ADCE">AD/CE</label>
-                </div>
-                <div class="CommonEraOptionDiv">
                     <input type="radio" id="Holocene">
-                    <label class="CheckboxLabel" for="Holocene">Holocene</label>
+                    <label class="CheckboxLabel" for="Holocene">Absolute</label>
                 </div>
                 <div class="CommonEraOptionDiv">
                     <input type="radio" id="E2">
-                    <label class="CheckboxLabel" for="E2">E2</label>
+                    <label id="E2Label" class="CheckboxLabel" for="E2">D2</label>
+                </div>
+                <div class="CommonEraOptionDiv">
+                    <input type="radio" id="ADCE">
+                    <label class="CheckboxLabel" for="ADCE">AD/CE</label>
                 </div>
             </div>
 
