changes in name. also new about link added

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -132,7 +132,7 @@
                 <div id="LinksSection">
                     <span class="MenuTitle">Links</span>
                     <div style="display: flex; justify-content: space-between;">
-                        <a id="aboutLink" href="#">Old Era</a>
+                        <a id="aboutLink" href="#">About</a>
                         <a id="whitePaperLink" href="#">White paper</a>
                         <a id="timelineLink" href="#">Interactive timeline</a>
                     </div>
